Feat: add rate limiting to requests
